# MAGE

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
agents/: __init__.py  goal_classifier.py  ingestion_agent.py  mining_agent.py  orchestrator.py  planner.py  qa_agent.py  recommendation_agent.py  visualization_agent.py
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/core/: __init__.py  config.py  database.py  dataset_store.py  deps.py  security.py
backend/models/: __init__.py  analysis_run.py  dataset.py  user.py
backend/routers/: __init__.py  analysis.py  auth.py  health.py  oauth.py
backend/schemas/: __init__.py  analysis.py  auth.py
backend/services/: __init__.py  analysis_run_service.py  dataset_service.py  export_service.py  orchestrator_service.py
data/knowledge_base/: clustering.md  correlation_analysis.md  distribution_profiling.md  missing_values.md  outlier_detection.md
data/samples/: sales.csv  sales.json  sales.parquet  sales.xlsx
data_pipeline/: __init__.py  ingestion.py  processing.py
docs/: api_contracts.md  architecture.md  auth_documentation.md  module2_plan.md
frontend/: Dockerfile  middleware.ts  next.config.ts  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth-callback/: page.tsx
frontend/app/components/: charts.tsx  markdown.tsx
infra/: docker-compose.yml
infra/k8s/: README.md
rag/: __init__.py  embeddings.py  knowledge_loader.py  vector_store.py
tests/agents/: __init__.py  test_goal_classifier.py  test_ingestion.py  test_ingestion_agent.py  test_mining_agent.py  test_orchestrator.py  test_planner.py  test_qa_agent.py  test_recommendation_agent.py  test_visualization_agent.py
tests/backend/: __init__.py  test_analysis_persistence.py  test_auth.py  test_dataset_store.py  test_export.py  test_health.py
tests/rag/: test_embeddings.py  test_knowledge_loader.py  test_vector_store.py
(+12 files in other folders)
