[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mage-backend"
version = "0.1.0"
description = "MAGE — Multi-Agent Goal-conditioned EDA — FastAPI Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ── Web framework ──────────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # ── Config / Env ───────────────────────────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",

    # ── Agents / Orchestration ─────────────────────────────────────────
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",

    # ── Vector Stores ──────────────────────────────────────────────────
    "faiss-cpu>=1.8.0",
    "chromadb>=0.5.0",

    # ── Data Processing ────────────────────────────────────────────────
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=16.0.0",

    # ── HTTP client (for internal service calls) ───────────────────────
    "httpx>=0.27.0",

    # ── Authentication ─────────────────────────────────────────────────
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "pydantic[email]>=2.7.0",

    # ── Database (async SQLite for dev, swap to asyncpg for prod) ──────
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests/backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
